--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -4,12 +4,12 @@
     "site_keywords": "CIJES - Structurons l’avenir ensemble",
     "site_description": "CIJES - Structurons l’avenir ensemble",
     "site_sigle": "CIJES",
-    "site_menu": "Le CIJES",
-    "site_menu2": "Services et Fonctionnalités",
+    "site_menu": "À propos",
+    "site_menu2": "Fonctionnalités",
     "site_menu3_": "Centre d’Aide",
-    "site_menu3": "Espace Partenaires",
+    "site_menu3": "Parcours & Méthodologie",
     "site_menu4": "FAQ",
-    "site_menu5": "Blog",
+    "site_menu5": "Témoignages",
     "site_menu6": "Contact",
     "site_connexion": "Connexion",
     "Welcome": "Bienvenue sur notre site !",
