--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -33,7 +33,7 @@
     "emailsite": "Nous envoyer un mail",
     "emailsite2": "info@cjet.tg",
     "adressesite": "Notre adresse",
-    "adressesite2": "Immeuble la marmite du terroir. Totsi",
+    "adressesite2": "Immeuble La Marmite du Terroir, Totsi – Lomé",
     "reseauxsociaux": "SUIVEZ-NOUS",
     "autresliens": "LIENS UTILES",
 
@@ -147,8 +147,8 @@
     "contact_detail": "Détail d'un contact",
     "contact_liste": "Liste des contacts",
     "contact_page": "Contacts",
-    "contact_page2": "Contacts",
-    "contact_page3": "Contacts",
+    "contact_page2": "Nous contacter",
+    "contact_page3": "Vous avez une question ? Un besoin particulier ? Notre équipe est là pour vous accompagner.",
     "contact_formulaire": "Nous contacter",
     "contact_formulaire2": "Nous contacter",
     "contact_nom": "Nom & prénom(s)",
