--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -148,7 +148,7 @@
     "contact_liste": "Liste des contacts",
     "contact_page": "Contacts",
     "contact_page2": "Nous contacter",
-    "contact_page3": "Vous avez une question ? Un besoin particulier ? Notre équipe est là pour vous accompagner.",
+    "contact_page3": "Vous avez une question ? Un besoin particulier ? <br>Notre équipe est là pour vous accompagner.",
     "contact_formulaire": "Nous contacter",
     "contact_formulaire2": "Nous contacter",
     "contact_nom": "Nom & prénom(s)",
